[gd_scene load_steps=4 format=2]

[ext_resource path="res://Spartan.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scripts/comp_Display.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Menu.tscn" type="PackedScene" id=4]

[node name="Root" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 576.0
margin_bottom = 1024.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.109804, 0.105882, 0.101961, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Compétences" type="Label" parent="."]
margin_right = 574.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 1 )
text = "Compétences et Formules"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Content Holder" type="VBoxContainer" parent="."]
margin_left = 24.0
margin_top = 64.0
margin_right = 552.0
margin_bottom = 944.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="Content Holder"]
margin_right = 528.0
margin_bottom = 24.0
placeholder_text = "Rechercher ..."
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Content Holder"]
margin_top = 28.0
margin_right = 528.0
margin_bottom = 52.0

[node name="Compe_check" type="CheckBox" parent="Content Holder/HBoxContainer"]
margin_right = 262.0
margin_bottom = 24.0
size_flags_horizontal = 3
pressed = true
text = "Compétences"

[node name="Formu_check" type="CheckBox" parent="Content Holder/HBoxContainer"]
margin_left = 266.0
margin_right = 528.0
margin_bottom = 24.0
size_flags_horizontal = 3
pressed = true
text = "Formules"

[node name="Comp" type="ScrollContainer" parent="Content Holder"]
margin_top = 56.0
margin_right = 528.0
margin_bottom = 826.0
rect_min_size = Vector2( 528, 770 )
mouse_filter = 1
follow_focus = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DiplayList" type="VBoxContainer" parent="Content Holder/Comp"]
margin_right = 528.0
margin_bottom = 770.0
rect_min_size = Vector2( 0, 100 )
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu_Commun" parent="." instance=ExtResource( 4 )]
anchor_top = 0.922
anchor_bottom = 1.0
margin_top = 7.87195
margin_bottom = 0.0
[connection signal="text_changed" from="Content Holder/LineEdit" to="." method="_on_LineEdit_text_changed"]
